<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/background_cardview"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddAccount">

    <Button
            android:text="@string/AgregarCuenta"
            android:background="@drawable/custom_button"
            android:layout_width="250dp"
            android:textColor="#FFFFFF"
            android:layout_height="60dp" android:id="@+id/btnAgregar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNickName2" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:hint="@string/HintNickname"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etServicio"
            />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etServicio" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent" android:hint="@string/HintServicio"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="11dp"
            app:layout_constraintBottom_toTopOf="@+id/etNickName2" />
    <EditText
            android:layout_width="342dp"
            android:layout_height="53dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etContrasena2" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etNickName2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/HintContrasena" />
    <EditText
            android:layout_width="338dp"
            android:layout_height="46dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etConfirmarContrasena" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/etContrasena2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:hint="@string/HintConfirmarContrasena" />
</androidx.constraintlayout.widget.ConstraintLayout>