<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".VerCuentaIndividual" android:background="@drawable/background_cardview">

    <Button
            android:text="@string/Volver"
            android:layout_width="250dp"
            android:layout_height="60dp" android:id="@+id/btnVolver"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:background="@drawable/custom_button"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
    <TextView
            android:layout_width="151dp"
            android:layout_height="59dp"
            android:id="@+id/textView5"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="@+id/guideline2" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" tools:text="@string/servicio"
            android:textSize="30sp" android:fontFamily="@font/rubik_medium" android:typeface="normal"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.026"
            android:text="@string/servicio"/>
    <TextView
            android:text="TextView"
            android:layout_width="273dp"
            android:layout_height="40dp"
            android:id="@+id/serviciotv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="68dp" android:layout_marginRight="68dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:fontFamily="@font/rubik_light"
            android:layout_marginStart="12dp" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="12dp" app:layout_constraintHorizontal_bias="0.242" android:textSize="24sp"/>
    <TextView
            android:text="TextView"
            android:layout_width="273dp"
            android:layout_height="40dp"
            android:id="@+id/usertv"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:fontFamily="@font/rubik_light" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.075" android:textSize="24sp"/>
    <TextView
            android:layout_width="238dp"
            android:layout_height="36dp"
            android:id="@+id/textView"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/serviciotv" android:fontFamily="@font/rubik_medium"
            android:textSize="24sp" tools:text="@string/Nickname" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.054"
            android:text="@string/Nickname"/>
    <TextView
            android:layout_width="198dp"
            android:layout_height="46dp"
            android:id="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/usertv" android:fontFamily="@font/rubik_medium"
            android:textSize="24sp" tools:text="@string/Contrasena" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginLeft="8dp"
            android:text="@string/Contrasena" app:layout_constraintHorizontal_bias="0.046"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="67dp" android:id="@+id/guideline2"/>
    <EditText
            android:layout_width="246dp"
            android:layout_height="48dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/contrasenatv"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:layout_marginTop="8dp" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginLeft="16dp"/>
    <ToggleButton
            android:text="ToggleButton"
            android:layout_width="57dp"
            android:layout_height="40dp"
            android:textOff=""
            android:textOn=""
            android:background="@drawable/t_button_contrasena"
            android:id="@+id/toggleButton" app:layout_constraintEnd_toEndOf="parent"
            android:checked="false" android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toEndOf="@+id/contrasenatv"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="29dp" android:id="@+id/guideline3"/>
</androidx.constraintlayout.widget.ConstraintLayout>